Added 1 project and animate each project image

--- a/index.html
+++ b/index.html
@@ -98,11 +98,15 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="YALE.png" alt="YALE_IMAGE">
+                            <video src="YALE.mp4" autoplay loop muted></video>
                         </div>
                         <div class="project-content">
-                            <h3>Task Management App</h3>
-                            <p>A collaborative project management tool with real-time updates, team collaboration features, and intuitive drag-and-drop interface.</p>
+                            <h3>Pasword Manager App</h3>
+                            <p>
+                                An app where users save passwords for 
+                                different services and generate strong, 
+                                secure passwords when needed.
+                            </p>
                             <a href="https://yale-v2rk.onrender.com/" class="project-link" target="_blank">View Project</a>
                         </div>
                     </div>
@@ -112,12 +116,28 @@
                             <img src="SIMPLIFI.png" alt="SIMPLIFI_IMAGE">
                         </div>
                         <div class="project-content">
-                            <h3>E-Commerce Platform</h3>
-                            <p>A full-featured e-commerce solution built with React and Node.js, featuring secure payments, inventory management, and real-time analytics.</p>
-                            <a href="https://simplifiapp.onrender.com/" class="project-link" target="_blank">View Project</a>
-                            <a href="https://github.com/yourusername/ecommerce-platform" class="project-link" target="_blank" style="margin-left: 1rem;">GitHub Repo</a>
+                            <h3>Attendance System</h3>
+                            <p>
+                                A simple app where users log time in and out. 
+                                It calculates hours worked and adds them to the total.
+                            </p>
+                            <a href="https://attendance-frontend-taupe.vercel.app/" class="project-link" target="_blank">View Project</a>
+                            <a href="#" class="project-link" target="_blank" style="margin-left: 1rem;">GitHub Repo</a>
                         </div>
                     </div>
+
+                    <div class="project-card">
+                        <div class="project-image">
+                            <video src="WELCOME AL.mp4" autoplay loop muted></video>
+                        </div>
+                        <div class="project-content">
+                            <h3>Income-Expense Tracker</h3>
+                            <p>A full-featured e-commerce solution built with React and Node.js, featuring secure payments, inventory management, and real-time analytics.</p>
+                            <a href="https://simplifiapp.onrender.com/" class="project-link" target="_blank">View Project</a>
+                        </div>
+                    </div>
+
+                    
                 </div>
             </div>
         </section>
