--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="SIMPLIFI.png" alt="SIMPLIFI_IMAGE">
+                            <video src="YALE.mp4" autoplay loop></video>
                         </div>
                         <div class="project-content">
                             <h3>Attendance System</h3>
