Fixed 2nd project video not playing

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                     <div class="project-card">
                         <div class="project-image">
-                            <video src="YALE.mp4" autoplay loop></video>
+                            <video src="YALE.mp4" autoplay loop muted></video>
                         </div>
                         <div class="project-content">
                             <h3>Attendance System</h3>
