Added video on attendance sysyem project

--- a/index.html
+++ b/index.html
@@ -98,6 +98,21 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <div class="project-image">
+                            <video src="ATTENDANCE SYSTEM.mp4" autoplay loop muted></video>
+                        </div>
+                        <div class="project-content">
+                            <h3>Attendance System</h3>
+                            <p>
+                                A simple app where users log time in and out. 
+                                It calculates hours worked and adds them to the total.
+                            </p>
+                            <a href="https://attendance-frontend-taupe.vercel.app/" class="project-link" target="_blank">View Project</a>
+                            <a href="#" class="project-link" target="_blank" style="margin-left: 1rem;">GitHub Repo</a>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <div class="project-image">
                             <video src="YALE.mp4" autoplay loop muted></video>
                         </div>
                         <div class="project-content">
@@ -113,22 +128,7 @@
 
                     <div class="project-card">
                         <div class="project-image">
-                            <video src="YALE.mp4" autoplay loop muted></video>
-                        </div>
-                        <div class="project-content">
-                            <h3>Attendance System</h3>
-                            <p>
-                                A simple app where users log time in and out. 
-                                It calculates hours worked and adds them to the total.
-                            </p>
-                            <a href="https://attendance-frontend-taupe.vercel.app/" class="project-link" target="_blank">View Project</a>
-                            <a href="#" class="project-link" target="_blank" style="margin-left: 1rem;">GitHub Repo</a>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <div class="project-image">
-                            <video src="WELCOME AL.mp4" autoplay loop muted></video>
+                            <video src="SIMPLIFI.mp4" autoplay loop muted></video>
                         </div>
                         <div class="project-content">
                             <h3>Income-Expense Tracker</h3>
