--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             </a>
             <ul class="nav-links">
                 <li><a href="#about">About Me</a></li>
-                <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#contact">Contact Me</a></li>
             </ul>
             <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false">☰</button>
@@ -59,26 +59,25 @@
             </div>
         </section>
 
-        <section id="certifications" class="certifications">
-            <div class="container">
-                <h2 class="section-title">Certifications</h2>
-                <div class="certification-grid">
-                    <div class="certification-item">
-                        <h3>Computer Systems Servicing National Certificate II</h3>
-                        <p>TESDA | Issued: AUGUST 2025</p>
-                        <a href="#" target="_blank">View Credential</a> </div>
-
-                </div>
-            </div>
-        </section>
-
         <section id="experience" class="experience">
             <div class="container">
                 <h2 class="section-title">Work Experience / Exposure</h2>
                 <div class="experience-grid">
                     <div class="experience-item">
+                        <h3>Backend Developer Intern</h3>
+                        <p>Codebility | Remote Set-up</p>
+                        <p>June 2025 - Present </p>
+                        <ul>
+                            <li>
+                                Developed RESTful APIs using Javascript and Typescript with ExpressJS and PostgreSQL
+                                to support frontend functionalities.
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="experience-item">
                         <h3>I.T Technician Intern</h3>
-                        <p>Leyte Provincial Capitol</p>
+                        <p>Leyte Provincial Capitol | Palo Leyte</p>
                         <p>February 2025 - May 2025 </p>
                         <p>(270 Hours)</p>
                         <ul>
@@ -86,6 +85,116 @@
                             <li>Troubleshoot network problems</li>
                             <li>Set-up servers</li>
                             <li>Troubleshoot software related problems</li>
+                        </ul>
+                    </div>
+
+                    <div class="experience-item">
+                        <h3>Computer System Servicing Teaching Assistant Intern</h3>
+                        <p>Future Proof Learning Center Corporation | Tacloban City, Leyte</p>
+                        <p>July 2025 - August 2025</p>
+                        <p>(150 Hours)</p>
+                        <ul>
+                            <li>
+                                Assisted instructors in delivering 
+                                comprehensive lessons on computer 
+                                hardware, software, networking, and 
+                                troubleshooting to 25 students.
+                            </li>
+
+                            <li>
+                                Answered student inquiries regarding course 
+                                content, assignments, and practical challenges,
+                                fostering a supportive and interactive 
+                                learning atmosphere.
+                            </li>
+
+                            <li>
+                                Implemented basic network setups for lab 
+                                activities, including IP addressing, cabling,
+                                and connectivity testing.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="experience-item">
+                        <h3>Cashier</h3>
+                        <p>Great Uptown Steel Corporation | Alangalang Leyte</p>
+                        <p>November 2021 - August 2022</p>
+                        <ul>
+                            <li>
+                                Prepare daily sales and expense report.
+                            </li>
+
+                            <li>
+                                Do payroll.
+                            </li>
+
+                            <li>
+                                Answer customer's query.
+                            </li>
+
+                            <li>
+                                Issue official receipts.
+                            </li>
+                                
+                            <li>
+                                Responsible for handling and managing cash on hand.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="skills" class="skills">
+            <div class="container">
+                <h2 class="section-title">Skills & Expertise</h2>
+                <div class="skills-grid">
+                    <div class="skill-category">
+                        <h3>
+                            <svg class="skill-icon" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12 2L2 7v10c0 5.55 3.84 9.95 9 11 5.16-1.05 9-5.45 9-11V7l-10-5z"/>
+                                <path d="M12 7v10l7-7-7-7z"/>
+                            </svg> 
+                            Frontend
+                        </h3>
+                        <ul class="skill-list">
+                            <li>JavaScript / TypeScript</li>
+                            <li>HTML 5</li>
+                            <li>CSS 3</li>
+                            <li>React JS</li>
+                        </ul>
+                    </div>
+                    <div class="skill-category">
+                        <h3>
+                            <svg class="skill-icon" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"/>
+                                <path d="M2 4h20v16H2V4zm2 2v12h16V6H4z"/>
+                            </svg>
+                            Backend
+                        </h3>
+                        <ul class="skill-list">
+                            <li>Node.js / Express</li>
+                            <li>Python / Django</li>
+                            <li>Database Design</li>
+                            <li>PostgreSQL</li>
+                        </ul>
+                    </div>
+                    <div class="skill-category">
+                        <h3>
+                            <svg class="skill-icon" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"/>
+                            </svg>
+                            Tools & Technologies
+                        </h3>
+                        <ul class="skill-list">
+                            <li>Install and Configure Computer Network</li>
+                            <li>Install and Set-up Windows Server</li>
+                            <li>Set-up client-server network</li>
+                            <li>Troubleshooting computer hardware and software</li>
+                            <li>Git / GitHub</li>
+                            <li>Postman</li>
                         </ul>
                     </div>
                 </div>
@@ -136,65 +245,30 @@
                             <a href="https://simplifiapp.onrender.com/" class="project-link" target="_blank">View Project</a>
                         </div>
                     </div>
-
-                    
                 </div>
             </div>
         </section>
 
-        <section id="skills" class="skills">
+        <section id="certifications" class="certifications">
             <div class="container">
-                <h2 class="section-title">Skills & Expertise</h2>
-                <div class="skills-grid">
-                    <div class="skill-category">
-                        <h3>
-                            <svg class="skill-icon" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M12 2L2 7v10c0 5.55 3.84 9.95 9 11 5.16-1.05 9-5.45 9-11V7l-10-5z"/>
-                                <path d="M12 7v10l7-7-7-7z"/>
-                            </svg> 
-                            Frontend
-                        </h3>
-                        <ul class="skill-list">
-                            <li>JavaScript / TypeScript</li>
-                            <li>HTML 5</li>
-                            <li>CSS 3</li>
-                            <li>React JS</li>
-                        </ul>
-                    </div>
-                    <div class="skill-category">
-                        <h3>
-                            <svg class="skill-icon" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"/>
-                                <path d="M2 4h20v16H2V4zm2 2v12h16V6H4z"/>
-                            </svg>
-                            Backend
-                        </h3>
-                        <ul class="skill-list">
-                            <li>Node.js / Express</li>
-                            <li>Python / Django</li>
-                            <li>Database Design</li>
-                            <li>PostgreSQL</li>
-                        </ul>
-                    </div>
-                    <div class="skill-category">
-                        <h3>
-                            <svg class="skill-icon" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"/>
-                            </svg>
-                            Tools & Technologies
-                        </h3>
-                        <ul class="skill-list">
-                            <li>Install and Configure Computer Network</li>
-                            <li>Install and Set-up Windows Server</li>
-                            <li>Set-up client-server network</li>
-                            <li>Git / GitHub</li>
-                            <li>Postman</li>
-                        </ul>
+                <h2 class="section-title">Certifications</h2>
+                <div class="certification-grid">
+                    <div class="certification-item">
+                        <h3>Computer Systems Servicing National Certificate II</h3>
+                        <p>TESDA | Issued: AUGUST 2025</p>
+                        <a href="#" target="_blank">View Credential</a> </div>
+
+                </div>
+
+                <div class="certification-grid">
+                    <div class="certification-item">
+                        <h3>WEB DEVELOPMENT BOOTCAMP</h3>
+                        <p>UDEMY | Issued: FEB 2023</p>
+                        <a href="https://www.udemy.com/certificate/UC-82fa5342-8d3a-4043-bbd6-728db49e0b49/" target="_blank">View Credential</a> 
                     </div>
                 </div>
             </div>
         </section>
-
 
         <section id="contact" class="contact">
             <div class="container">
