Added new resume file and fixed simplifi project description

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="#contact" class="cta-button">
                         <span class="button-inner">Get In Touch</span>
                     </a>
-                    <a href="Resume.pdf" class="cta-button" download style="margin-left: 1rem;">
+                    <a href="AL RANDOLPH VILLEGAS.pdf" class="cta-button" download style="margin-left: 1rem;">
                         <span class="button-inner">Download CV</span>
                     </a>
                 </div>
@@ -241,7 +241,9 @@
                         </div>
                         <div class="project-content">
                             <h3>Income-Expense Tracker</h3>
-                            <p>A full-featured e-commerce solution built with React and Node.js, featuring secure payments, inventory management, and real-time analytics.</p>
+                            <p>
+                                My income and expense tracker is a user-friendly application designed to help individuals effortlessly monitor their financial inflows and outflows.
+                            </p>
                             <a href="https://simplifiapp.onrender.com/" class="project-link" target="_blank">View Project</a>
                         </div>
                     </div>
