Change the color of the get-in-touch cta button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <span class="button-inner">Get In Touch</span>
                     </a>
                     <a href="AL RANDOLPH VILLEGAS.pdf" class="cta-button" download style="margin-left: 1rem;">
-                        <span class="button-inner">Download CV</span>
+                        <span class="button-inner" style="background-color: #1DB954;">Download CV</span>
                     </a>
                 </div>
             </div>
@@ -53,7 +53,16 @@
                         <img src="AL_ID_PIC.jpg" alt="AL_IMAGE">
                     </div>
                     <div class="about-text">
-                        <p>I am a computer engineering student with a passion for backend development. I enjoy solving logical related problems and working with data to create efficient and functional systems. I am continuously exploring new technologies, improving my coding skills, and learning best practices in software development. I have experience with Node.js, Express, and PostgreSQL, and I am eager to deepen my understanding of backend frameworks and database management.</p>
+                        <p>
+                            I am a <span style="color: #1DB954;">computer engineering</span> student with a passion for 
+                            <span style="color: #1DB954;">backend development</span>. 
+                            I enjoy solving logical related problems and working with data to create efficient and functional systems. 
+                            I am continuously exploring new technologies, improving my coding skills, and learning best practices 
+                            in software development. I have experience with 
+                            <span style="color: #1DB954;">Node.js</span>, <span style="color: #1DB954;">Express</span>, and 
+                            <span style="color: #1DB954;">PostgreSQL</span>, and I am eager 
+                            to deepen my understanding of backend frameworks and <span style="color: #1DB954;">database management</span>.    
+                        </p>
                     </div>
                 </div>
             </div>
