Update Resume PDF and Adjust Contacts Font

--- a/index.html
+++ b/index.html
@@ -288,22 +288,28 @@
                     <p>I'm always interested in new opportunities and collaborations. Feel free to reach out!</p>
                     <div class="contact-info">
                         <div class="contact-item">
+                            <strong>Facebook</strong>
+                            <a href="https://www.facebook.com/alrandolphvillegass" target="_blank">facebook.com/alrandolphvillegass</a>
+                        </div>
+
+                        <div class="contact-item">
                             <strong>Email</strong>
                             <a href="mailto:villegasalrandolph@gmail.com">villegasalrandolph@gmail.com</a>
                         </div>
+                        
                         <div class="contact-item">
                             <strong>GitHub</strong>
                             <a href="https://github.com/VILLEGASAL" target="_blank">https://github.com/VILLEGASAL</a>
                         </div>
-                        <div class="contact-item">
-                            <strong>Facebook</strong>
-                            <a href="https://www.facebook.com/alrandolphvillegass" target="_blank">facebook.com/alrandolphvillegass</a>
-                        </div>
+                        
                         <div class="contact-item">
                             <strong>Phone</strong>
                             <a href="tel:09456235800">0945-623-5800</a>
                         </div>
-
+                        <div class="contact-item">
+                            <strong>LinkedIn</strong>
+                            <a href="https://www.linkedin.com/in/al-randolph-villegas">linkedin.com</a>
+                        </div>
                     </div>
                 </div>
             </div>
