--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <div class="certification-item">
                         <h3>Computer Systems Servicing National Certificate II</h3>
                         <p>TESDA | Issued: AUGUST 2025</p>
-                        <a href="#" target="_blank">View Credential</a> </div>
+                        <a href="https://drive.google.com/file/d/1dwfI5JhOuiBKXk40WlIPMkfl6T_c-4Pl/view?usp=drive_link" target="_blank">View Credential</a> </div>
 
                 </div>
 
