Added Job Description in Backend Developer Exp

--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
                                 Developed RESTful APIs using Javascript and Typescript with ExpressJS and PostgreSQL
                                 to support frontend functionalities.
                             </li>
+
+                            <li>
+                                Developed and integrated AI-powered API endpoints that process image data to provide diagnostic insights.
+                            </li>
+
+                            <li>
+                                Implemented a robust error-handling system to ensure data integrity and reliable API responses.
+                            </li>
                         </ul>
                     </div>
 
